--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -1,54 +1,83 @@
 audio {
-  display: none;
+    display: none;
 }
 
 .example-spacer {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 .mat-raised-button {
-  margin-left: 5px;
+    margin-left: 5px;
 }
 
 .navbar-hide-small {
-  display: flex;
+    display: flex;
 }
 
 .navbar-show-small {
-  display: none;
+    display: none;
 }
 
 .github-logo {
-  margin: 12px 0px 12px 6px;
-  vertical-align: middle;
+    margin: 12px 0px 12px 6px;
+    vertical-align: middle;
 }
 
 .brand {
-  font-size: 120%;
+    font-size: 120%;
 }
 
 .brand small {
-  font-size: 60%;
+    font-size: 60%;
 }
 
 .brand .material-icons {
-  font-size: 90%;
-  line-height: 120%;
+    font-size: 90%;
+    line-height: 120%;
 }
 
 .mat-list-item {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 @media (max-width: 720px) {
-  .navbar-hide-small {
-    display: none;
-  }
-  .navbar-show-small {
+    .navbar-hide-small {
+        display: none;
+    }
+    .navbar-show-small {
+        display: flex;
+    }
+    .navbar-show-small mat-slider,
+    .navbar-show-small button {
+        text-decoration: inherit;
+        flex: 1;
+    }
+}
+
+.align-content {
     display: flex;
-  }
-  .navbar-show-small mat-slider, .navbar-show-small button {
-    text-decoration: inherit;
-    flex: 1;
-  }
+    flex-wrap: wrap;
+    padding: 0;
+    flex-grow: 2;
+}
+
+.align-content .square {
+    width: 33%;
+}
+
+.align-content .square .mat-card {
+    margin: 1vh;
+}
+
+.truncate {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.streamurl.mat-line {
+    padding-top: 10px !important;
+    font-size: 70% !important;
+    color: #aaa;
 }
