--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,21 +1,20 @@
 <audio #player autoplay controls preload></audio>
 <mat-toolbar>
     <mat-toolbar-row>
-        <span class="brand">
-      <i class="material-icons">
-        radio
-      </i>
-      webradio
-      <small> {{_currentChamel}}</small> </span>
+        <div class="brand">
+            <i class="material-icons">radio</i> webradio
+        </div>
+        <small class="currentChannel">{{_currentChannelDisplay}}</small>
+        <span *ngIf="!(_showGithub | async)" class="example-spacer"></span>
         <div class="navbar-hide-small">
             <mat-slider min="0" max="1" step="0.1" (change)="onChange($event)" [value]="_volume" thumbLabel [disabled]="_disabledVolume"></mat-slider>
             <button mat-raised-button (click)="setPlay()" [disabled]="_disabledPlay">
         Play
-        <i class="material-icons" *ngIf="_clickedPlay" >
-           play_arrow
+        <i class="material-icons" *ngIf="_clickedPlay">
+          play_arrow
         </i>
-        <i class="material-icons" *ngIf="!_clickedPlay" >
-           pause
+        <i class="material-icons" *ngIf="!_clickedPlay">
+          pause
         </i>
       </button>
             <button mat-raised-button (click)="setStop()" [disabled]="_disabledStop">
@@ -23,25 +22,24 @@
         <i class="material-icons">
           stop
         </i>
-     </button>
+      </button>
         </div>
-        <span class="example-spacer"></span>
-        <a mat-raised-button href='https://github.com/rzeiler/webradio' target="_blank">
+        <span *ngIf="(_showGithub | async)" class="example-spacer"></span>
+        <a *ngIf="(_showGithub | async)" mat-raised-button href='https://github.com/rzeiler/webradio' target="_blank">
       Github
-      <img alt="angular" height="24px" width="24px" class="github-logo" src="assets/github-circle-white-transparent.svg">
-   </a>
-
+      <img alt="angular" height="24px" width="24px" class="github-logo"
+        src="assets/github-circle-white-transparent.svg">
+    </a>
     </mat-toolbar-row>
     <mat-toolbar-row class="navbar-show-small">
-
         <mat-slider min="0" max="1" step="0.1" (change)="onChange($event)" [value]="_volume" thumbLabel [disabled]="_disabledVolume"></mat-slider>
         <button mat-raised-button (click)="setPlay()" [disabled]="_disabledPlay">
       Play
-      <i class="material-icons" *ngIf="_clickedPlay" >
-         play_arrow
+      <i class="material-icons" *ngIf="_clickedPlay">
+        play_arrow
       </i>
-      <i class="material-icons" *ngIf="!_clickedPlay" >
-         pause
+      <i class="material-icons" *ngIf="!_clickedPlay">
+        pause
       </i>
     </button>
         <button mat-raised-button (click)="setStop()" [disabled]="_disabledStop">
@@ -49,12 +47,11 @@
       <i class="material-icons">
         stop
       </i>
-   </button>
-
+    </button>
     </mat-toolbar-row>
 </mat-toolbar>
-<mat-tab-group>
-    <mat-tab label="{{category.name}}" *ngFor="let category of channels">
+<mat-tab-group #tabGroup>
+    <mat-tab label="{{category.name}}" *ngFor="let category of data">
         <mat-selection-list (selectionChange)="handleSelection($event)">
             <mat-list-option color="warn" matTooltip="{{channel.url}}" [value]="channel" *ngFor="let channel of category.channels">
                 <h3 matLine> {{channel.name}} </h3>
